--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         >
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" style="cursor: pointer;" onclick="scrollToTarget()" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" style="cursor: pointer;" onclick="scrollToTarget()" href="./second.html">Home</a>
             </li>
             <li class="nav-item">
               <a class ="nav-link" href="./index.html">Grid</a>
@@ -106,27 +106,7 @@
         </div>
       </div>
     </div>
-<div id="target-section">
-    <div class="px-4 py-5 my-5 text-center">
-      <img
-        class="d-block mx-auto mb-4 my-5"
-        src="./1689133512896.jpg"
-        alt=""
-        width="180"
-        height="180"
-      />
-      <h1 class="display-5 fw-bold text-body-emphasis">Ayush Gautam</h1>
-      <div class="col-lg-6 mx-auto">
-        <p class="lead mb-4">20224040</p>
-        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <a class="btn btn-primary" href="https://www.instagram.com/_ayushgautam2733/" role="button">Instagram</a>
-        </div>
-      </div>
-    </div>
-</div>
-    <a href="#" onclick="scrollToTarget()"></a>
 
-    </div>
 
     
 
